--- a/WEB-FUN_W1/Profile/style.css
+++ b/WEB-FUN_W1/Profile/style.css
@@ -11,7 +11,7 @@
 }
 .nav div{
     width: 100%;
-    height:  1em;
+    height:  2em;
 }
 .nav div p{
     font-size: 12px;
@@ -21,6 +21,9 @@
     background-color: #16a2b8;
     color: white;
     padding: 6px 12px;
+}
+h1{
+    padding-bottom: 3em;
 }
 
 /* Main Container */
@@ -33,39 +36,36 @@
 /* Flex Column 1 */
 
 .col-1{
-    flex: 3;
+    flex: 1;
     background-color: blue;
-    width: 100%;
-    height: 100%;
     
 }
 
 /*  User card */
 .usercard{
+    display: flex;
     border: 15px solid #16a2b8;
-    height: 400px;
-    width: 110%;
+    height: 25%;
 }
 .topcard{
     height: 30%;
-    width: 110%;
+    width: 100%;
     padding-left: 1em;
     background-color: #16a2b8;
     
 }
 .p-pic{
-    height: 150px;
-    width: 150px;
-    margin-top: 50px;
+    height: 50px;
+    width: 50px;
+    margin-top: 5px;
 }
 
 .main{
-    padding: 50px;
+    width: 100%;
+    height: 70%;
 }
 
-.flex{
-    display: flex;
-}
+
 .icons{
     height: 15px;
     width: 15px;
@@ -76,11 +76,11 @@ h1{
 }
 
 /* Flex Column 2 */
+
 .col-2{
-    flex: 2;
+    flex: 1;
     background-color: blueviolet;
-    width: 100%;
-    height: 100%;
+
 }
 
 /* Multiclass CSS */
