--- a/WEB-FUN_W1/Profile/style.css
+++ b/WEB-FUN_W1/Profile/style.css
@@ -20,65 +20,58 @@
 .nav button{
     background-color: #16a2b8;
     color: white;
-    padding: 6px 12px;
+    padding: 2px 12px;
 }
-h1{
-    padding-bottom: 3em;
+.nav h1{
+    padding-bottom: .5em;
+    color: white;
 }
 
 /* Main Container */
 
-.main{
-    height: 70%;
+.container{
     width: 100%;
-
+    height: 35em;
+    color: black;
+    padding: 2em;
 }
 /* Flex Column 1 */
 
 .col-1{
-    flex: 1;
-    background-color: blue;
-    
+    flex:3;
 }
 
 /*  User card */
+
 .usercard{
-    display: flex;
-    border: 15px solid #16a2b8;
-    height: 25%;
+    width: 70%;
+    height: 50%;
+    border: 3px solid black;
+    color: black;
+    margin-bottom: 1em;
 }
-.topcard{
-    height: 30%;
-    width: 100%;
-    padding-left: 1em;
-    background-color: #16a2b8;
-    
-}
-.p-pic{
-    height: 50px;
-    width: 50px;
-    margin-top: 5px;
+.usercard-header img{
+    height: 75px;
+    width: 75px;
 }
 
-.main{
-    width: 100%;
-    height: 70%;
+.education{
+    width: 70%;
+    height: 40%;
+    border: 2px solid black;
+}
+.education h3{
+    height: 20px;
+    width: 110%;
+    background-color: black;
+    color: white
 }
 
-
-.icons{
-    height: 15px;
-    width: 15px;
-
-}
-h1{
-    margin-top: 2em;
-}
 
 /* Flex Column 2 */
 
 .col-2{
-    flex: 1;
+    flex:2;
     background-color: blueviolet;
 
 }
@@ -97,4 +90,9 @@ h1{
 
 .justify-between{
 justify-content: space-around;
+
+}
+
+.text-align{
+    text-align: centerß;
 }
