--- a/WEB-FUN_W1/Profile/style.css
+++ b/WEB-FUN_W1/Profile/style.css
@@ -50,9 +50,14 @@
     color: black;
     margin-bottom: 1em;
 }
-.usercard-header img{
-    height: 75px;
-    width: 75px;
+.header-usercard{
+    width: 100%;
+    height: 30%;
+    background-color: cadetblue;
+}
+.header-usercard img{
+    height: 20px;
+    width: 20px;
 }
 
 .education{
