--- a/WEB-FUN_W1/Profile/style.css
+++ b/WEB-FUN_W1/Profile/style.css
@@ -34,6 +34,7 @@
     height: 35em;
     color: black;
     padding: 2em;
+    margin-right: 1em;
 }
 /* Flex Column 1 */
 
@@ -98,30 +99,58 @@
 .col-2{
     flex:2;
     padding-right: 2em;
+    margin-top: 1em;
 }
 
 .connection-requests{
-
+    display: flex;
     width: 100%;
     height: 30%;
     border: 3px solid black;
+    margin-top: 2em;
 
 }
 
 .con-header{
+    align-items: center;
     background-color: black;
     color: white;
     width: 100%;
-    height: 30px;
+    height: 40px;
 }
 .number{
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     background-color: gray;
     border:1px solid gray;
     border-radius: 50%;
-    
+    padding: 0px 5px;
+    margin-right: 10px;
 }
+.connection-cue{
+    display: flex;
+    margin: 10px;
+
+}
+.start, .end{
+    display: flex;
+    height: 40px;
+    width: 40px;
+    margin-top: 1em;
+}
+.your-connections{
+    display: flex;
+    width: 100%;
+    height: 120px;
+    border: 3px solid black;
+    margin-top: 2em;
+
+}
+
+
+
+
+
 /* Multiclass CSS */
 .flex{
     display: flex;
