--- a/WEB-FUN_W1/GitHub_Blocks/style.css
+++ b/WEB-FUN_W1/GitHub_Blocks/style.css
@@ -1,49 +1,39 @@
 *{
-    background-color: antiquewhite;
-    padding: 5px;
-    margin: 5px;
+    margin: 0px;
+    padding: 0px;
 }
 
-img{
-    height: 200px;
+.header{
+    width: auto;
+    text-align: center;
+    font-size: 45px;
+    font-weight: 950;
+    padding-top: 10px;
 }
-h1{
-    font-size: 60px; 
-    width: 900px;
-    height: 65px;
+.flex{
     display: flex;
-    justify-content: center;
 }
-.row1{
-    background-color:rgb(177, 177, 19);
-    width: 100%;
-    height: 215px;
-    display: flex;
-    justify-content: center;
-    justify-content: space-evenly;
-
+.row{
+    height: 130px;
+    width: 95%;
+    background-color;
+   justify-content: space-around;
+   justify-content: space-evenly;
+   margin: 20px 15px;
 }
-.row2{
-    background-color: rgb(233, 233, 173);
-    width: 100%;
-    height: 215px;
-    display: flex;
-    justify-content: center;
-    justify-content: space-evenly;
-
+.first{
+    background-color: rgb(206, 238, 238);
+    padding: 10px;
 }
-.row3{
-    background-color: olive;
-    width: 100%;
-    height: 215px;
-    display: flex;
-    justify-content: center;
-    justify-content: space-evenly;
-
+.second{
+    background-color: rgb(184, 145, 221);
+    padding: 10px;
 }
-.footer{
-    width: 100%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+.third{
+    background-color: rgb(245, 150, 116);
+    padding: 10px;
+}
+h5{
+    text-align: center;
+    padding-top: 20px;
 }
