--- a/WEB-FUN_W1/Profile Page/style.css
+++ b/WEB-FUN_W1/Profile Page/style.css
@@ -2,28 +2,43 @@
     margin: 0%;
     padding: 0px;
 }
+
+.pagecontainer{
+    width: 700px;
+    height: 1000px;
+    margin: auto;
+}
 /* Navigation Bar*/
 .nav{
+    width: auto;
     background-color: black;
     color: white;
     font-family: sans-serif;
     height: 4em;
+    justify-content: space-between;
+    padding-left: 2em;
+    align-items: center;
+    text-align: center;
 }
 .nav div{
-    width: 100%;
-    height:  2em;
+    width: 100%;s
+    height: 2em;
 }
 .nav div p{
     font-size: 12px;
     width: 25%;
 }
+.profile{
+    flex: 2;
+}
 .nav button{
+    flex: 1;
     background-color: #16a2b8;
     color: white;
     padding: 2px 12px;
+    text-align: right;
 }
 .nav h1{
-    padding-bottom: .5em;
     color: white;
 }
 
@@ -33,8 +48,7 @@
     width: 100%;
     height: 35em;
     color: black;
-    padding: 2em;
-    margin-right: 1em;
+    margin-top: 1em;
 }
 /* Flex Column 1 */
 
@@ -91,6 +105,7 @@
 }
 .education-body{
     margin-top: 10px;
+    padding: 15px;
 }
 
 
@@ -98,17 +113,21 @@
 
 .col-2{
     flex:2;
-    padding-right: 2em;
-    margin-top: 1em;
+    width: 100%;
 }
 
 .connection-requests{
     display: flex;
-    width: 100%;
-    height: 30%;
+    width: 300px;
+    height: 175px;
     border: 3px solid black;
-    margin-top: 2em;
-
+    margin-bottom: 30px;
+}
+.your-connections{
+    display: flex;
+    width: 300px;
+    height: 303px;
+    border: 3px solid black;
 }
 
 .con-header{
@@ -116,7 +135,8 @@
     background-color: black;
     color: white;
     width: 100%;
-    height: 40px;
+    height: 25px;
+    padding: 10px;
 }
 .number{
     width: 30px;
@@ -127,34 +147,29 @@
     padding: 0px 5px;
     margin-right: 10px;
 }
+.connection-request-cue{
+    display: flex;
+    color: black;
+    justify-items: center;
+    margin: 10px;
+    padding: 10px;
+}
+
 .connection-cue{
     display: flex;
+    color: black;
+    align-items: center;
+    justify-items: center;
     margin: 10px;
-
+    padding: 10px;
 }
-.start, .end{
-    display: flex;
-    height: 40px;
-    width: 40px;
-    margin-top: 1em;
-}
-.your-connections{
-    display: flex;
-    width: 100%;
-    height: 120px;
-    border: 3px solid black;
-    margin-top: 2em;
-
-}
-
-
-
-
-
 /* Multiclass CSS */
 .flex{
     display: flex;
-
+}
+.photo{
+    height: 40px;
+    width: 40px;
 }
 .align-center{
     align-items: center;
@@ -167,7 +182,11 @@
 justify-content: space-around;
 
 }
+.align-right{
+    align-items: flex-end;
+}
 
 .text-align{
-    text-align: centerß;
+    text-align: center;
+    padding-left: 2em;
 }
